Update to latest goa.
Fix typo in initial "Starting" log entry.
